syntax = "proto3";

option java_multiple_files = true;
option java_package = "<%=packageName%>.grpc";
option java_outer_classname = "PageRequestProto";

package util;

enum Direction {
    ASC = 0;
    DESC = 1;
}

message Order {
    Direction direction = 1;
    string property = 2;
}

message PageRequest {
    int32 page = 1;
    int32 size = 2;
    repeated Order orders = 3;
}
